<resources>
    <string name="app_name">RealNameChatting</string>
    <string name="singup_txt">회원가입</string>
    <string name="hint_email">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_re_password">비밀번호 다시 입력</string>
    <string name="hint_phone">전화번호</string>
    <string name="hint_name">이름</string>
    <string name="login">로그인</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_friend">친구</string>
    <string name="title_chat_rooms">채팅목록</string>
    <string name="title_setting">설정</string>
    <string name="rooms_default_name">채팅방이름</string>
    <string name="rooms_default_message">채팅방 메세지</string>
</resources>